--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.firebase:firebase-ads:18.1.1'
 
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
+
 }
 apply plugin: 'com.google.gms.google-services'
