--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-ads:18.1.1'
 
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
