--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     implementation 'com.facebook.android:facebook-android-sdk:5.4.0'
     implementation 'com.facebook.android:facebook-login:5.4.0'
+    implementation 'com.facebook.android:audience-network-sdk:5.4.1'
 //
     implementation 'com.google.firebase:firebase-auth:18.0.0'
     implementation 'com.google.firebase:firebase-core:17.0.0'
